# school-ips-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/logic/: data_loader.py  database.py  etl_trigger.py
app/ui/: controls.py  display.py  filters.py
config/: settings.py
data_ingestion/: fetch_ips_data.py
dbt_school_ips/: .user.yml  dbt_project.yml
dbt_school_ips/models/: sources.yml  stg_ips_ecoles.sql  stg_ips_ecoles.yml
dbt_school_ips/models/staging/: stg_ips_ecole.sql
etl/: create_and_ingest.py  ingest_ips.py  raw_schema.py  schema.py
load/: load_to_db.py
transform/: normalize_ips.py
