[tool.poetry]
name = "school-ips-app"
version = "0.1.0"
description = "Interactive app to explore social disparities between public and private schools in France."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = "*"
pandas = "*"
plotly = "*"
geopandas = "*"
folium = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

